--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "async-lock": "^1.1.3",
     "iso-639-3": "^1.1.0",
+    "lodash": "^4.17.11",
     "node-fetch": "^2.2.0",
     "sanitize-html": "^1.19.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.1",
     "@types/jest": "^23.3.9",
+    "@types/lodash": "^4.14.117",
     "@types/node": "^8.0.57",
     "@types/node-fetch": "^2.1.2",
     "@types/striptags": "^3.1.1",
