--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "test": "jest",
   "dependencies": {
     "async-lock": "^1.1.3",
+    "html-to-text": "^4.0.0",
     "iso-639-3": "^1.1.0",
     "lodash": "^4.17.11",
     "node-fetch": "^2.2.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.1",
+    "@types/html-to-text": "^1.4.31",
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.117",
     "@types/node": "^8.0.57",
